--- a/sass/modules/post-card/_post-card-one.scss
+++ b/sass/modules/post-card/_post-card-one.scss
@@ -6,7 +6,7 @@
   border: 1px solid rgb(223, 226, 233);
   border-radius: 13px;
   gap: 40px;
-  margin-bottom: 25px;
+  margin-bottom: 34px;
 
   .image {
     overflow: hidden;
