--- a/sass/modules/post-card/_post-card-three.scss
+++ b/sass/modules/post-card/_post-card-three.scss
@@ -1,6 +1,6 @@
 .post-card {
     &.style-three {
-        height: 468px;
+        height: 470px;
         justify-content: end;
         align-items: end;
         position: relative;
