--- a/sass/modules/testimonial/_testimonial-card-two.scss
+++ b/sass/modules/testimonial/_testimonial-card-two.scss
@@ -1,6 +1,6 @@
 .testimonial-card {
     &.style-two {
-        padding: 44px;
+        padding: 66px 44px;
         @media only screen and (min-width: 1200px) and (max-width: 1399px) {
             padding: 30px;
         }
